--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "devDependencies": {
         "express": "3.x",
+        "gulp": "3.7.0",
         "gulp-help": "0.1.7",
         "gulp-shell": "0.2.5"
     }
