--- a/.jshintrc
+++ b/.jshintrc
@@ -18,6 +18,7 @@
     "strict": true,
     "trailing": true,
     "smarttabs": true,
+    "es5": true, // run not in IE8 and below
     "predef": [
       "require"
     ]
